welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:14: error: ')' expected but ',' found.
    	if (y==9, y==19) {
                ^MethodsDogHouse:19: error: illegal start of simple expression
    	}	
        ^